--- a/styles/index.css
+++ b/styles/index.css
@@ -1,18 +1,18 @@
-:root{
-    --Cyan: hsl(179, 62%, 43%);
-    --Bright-Yellow: hsl(71, 73%, 54%);
-    --Light-Gray: hsl(204, 43%, 93%);
-    --Grayish-Blue: hsl(218, 22%, 67%);
-    --white-color: white;
+:root {
+  --Cyan: hsl(179, 62%, 43%);
+  --Bright-Yellow: hsl(71, 73%, 54%);
+  --Light-Gray: hsl(204, 43%, 93%);
+  --Grayish-Blue: hsl(218, 22%, 67%);
+  --white-color: white;
 }
-body{
-    background-color: var(--Light-Gray);
-    height: 100vh;
-    font-size: 1rem;
-    font-family: 'Karla', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+  background-color: var(--Light-Gray);
+  height: 100vh;
+  font-size: 1rem;
+  font-family: "Karla", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .sr-only {
   position: absolute;
@@ -24,126 +24,119 @@ body{
   clip: rect(0, 0, 0, 0);
   border: 0;
 }
-.content{
-    display: grid;
-    width: 620px;
-    height: 448px;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 5fr 6fr;
-    border-radius: 10px;    
-    box-shadow: 1px 1px 10px 1px rgb(186 180 180 / 75%);
+.content {
+  display: grid;
+  width: 620px;
+  height: 448px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 5fr 6fr;
+  border-radius: 10px;
+  box-shadow: 1px 1px 10px 1px rgb(186 180 180 / 75%);
 }
 
 .secc_one {
-    padding: 20px 35px;
-    grid-column: 1 / 3;
+  padding: 20px 35px;
+  grid-column: 1 / 3;
+  grid-row: 1/ 2;
+  background-color: var(--white-color);
+  border-radius: 10px 10px 0 0;
+}
+.secc_one h2 {
+  color: var(--Cyan);
+}
+
+.secc_one-subtitulo {
+  color: var(--Bright-Yellow);
+  font-weight: 700;
+}
+.secc_one-description {
+  color: var(--Grayish-Blue);
+  line-height: 1.5;
+}
+.content h3 {
+  color: var(--white-color);
+}
+.secc_two {
+  background-color: var(--Cyan);
+  border-radius: 0px 0px 0px 10px;
+  padding: 20px 35px;
+}
+.secc_two-description {
+  color: var(--Light-Gray);
+  font-size: 0.9rem;
+}
+.card-precio {
+  color: var(--white-color);
+  font-size: 1.5rem;
+  display: inline-block;
+}
+.precio_description {
+  font-size: 0.7rem;
+  color: var(--Light-Gray);
+  display: inline-block;
+  position: relative;
+  top: -3px;
+  padding-left: 5px;
+  opacity: 0.8;
+}
+
+.secc_three {
+  background-color: var(--Cyan);
+  opacity: 0.7;
+  border-radius: 0px 0px 10px 0px;
+  padding: 18px 70px 20px 38px;
+  line-height: 1.4;
+}
+.secc_three-description {
+  color: var(--Light-Gray);
+  font-size: 0.9rem;
+}
+
+.button_card {
+  margin: 15px 0;
+  width: 95%;
+  height: 40px;
+  background-color: var(--Bright-Yellow);
+  color: var(--white-color);
+  border: none;
+  border-radius: 5px;
+  box-shadow: 1px 1px 2px 0px rgb(92 89 89 / 75%);
+}
+
+@media (max-width: 650px) {
+  body {
+    align-items: normal;
+
+    margin-top: 30px;
+  }
+
+  .content {
+    width: 300px;
+    height: 435px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+  .secc_one {
+    padding: 10px 25px;
+    grid-column: 1 / 2;
     grid-row: 1/ 2;
-    background-color: var(--white-color);
-    border-radius: 10px 10px 0 0;
-}
-.secc_one h2{
-    color: var(--Cyan);
-}
-
-.secc_one-subtitulo{
-    color: var(--Bright-Yellow);
-    font-weight:700 ;
-}
-.secc_one-description{
-    color: var(--Grayish-Blue);
-    line-height: 1.5;
-}
-.content h3{
-    color: var(--white-color);
-}
-  .secc_two{
-      background-color: var(--Cyan);
-      border-radius: 0px 0px 0px 10px;
-      padding: 20px 35px;
-
-  }
-  .secc_two-description{
-    color: var(--Light-Gray);
-      font-size: 0.9rem;
-  }
-  .card-precio{
-    color: white;
-    font-size: 1.5rem;
-    display: inline-block;
-  }
-  .precio_description{
-      font-size: 0.7rem;
-      color: var(--Light-Gray);
-      display: inline-block;
-    position: relative;
-    top: -3px;
-    padding-left: 5px;
-    opacity: 0.8;
   }
 
-  .secc_three{
-    background-color: var(--Cyan);
-    opacity: 0.7;
-    border-radius: 0px 0px 10px 0px;
-    padding: 18px 70px 20px  38px;
-    line-height: 1.4;
+  .secc_two {
+    padding: 10px 25px;
 
-}
-.secc_three-description{
-    color: var(--Light-Gray);
+    border-radius: 0px 0px 0px 0px;
+  }
+
+  .secc_three {
+    padding: 0px 70px 10px 20px;
+    border-radius: 0px 0px 10px 10px;
+  }
+  .secc_one-subtitulo {
     font-size: 0.9rem;
-
-}
-
-.button_card{
-    margin: 15px 0;
-    width: 95%;
-    height: 40px;
-    background-color: var(--Bright-Yellow);
-    color: var(--white-color);
-    border: none;
-    border-radius: 5px;
-    box-shadow: 1px 1px 2px 0px rgb(92 89 89 / 75%);
-
-}
-
-  @media (max-width: 650px) {
-    body{
-        align-items: normal;
-
-        margin-top: 30px;
-
-    }
-   
-    .content{
-        width: 300px;
-        height: 435px;
-        grid-template-columns: 1fr ;
-        grid-template-rows: 1fr 1fr 1fr;
-    }
-    .secc_one {
-        padding: 10px 25px;
-        grid-column: 1 / 2;
-        grid-row: 1/ 2;
-      }
-
-      .secc_two{
-        padding: 10px 25px;
-
-        border-radius: 0px 0px 0px 0px;
-
-      }
-
-      .secc_three{
-        padding: 0px 70px 10px 20px;
-        border-radius: 0px 0px 10px 10px;
-
-      }
-      .secc_one-subtitulo{
-        font-size: 0.9rem;
-    }
-    .secc_one-description{
-        font-size: 0.7rem;
-        line-height: 1.5;
-    }
   }
+  .secc_one-description {
+    font-size: 0.7rem;
+    line-height: 1.5;
+  }
+}
